--- a/spring_config/src/main/resources/bootstrap.yml
+++ b/spring_config/src/main/resources/bootstrap.yml
@@ -8,16 +8,16 @@ spring:
     config:
       server:
         git:
-          uri: http://192.168.1.110/cyyaw/config-respo.git
-          search-paths:
-          username: root  #账号密码写真实的快一些我觉得，不使用也能访问有点慢
-          password: 12345678
+          uri: https://github.com/1663784811/cyyaw.git
+          search-paths: /config-respo
+          #username: root  #账号密码写真实的快一些我觉得，不使用也能访问有点慢
+          #password: 12345678
 
   rabbitmq: #本地环境不需要配置mq
-    host: 192.168.1.110
+    host: 192.168.0.104
     port: 5672
-    username: guest
-    password: guest
+    username: root
+    password: root
 
 
 eureka:
