--- a/config-respo/cyyaw-spring-gateway-prod.yml
+++ b/config-respo/cyyaw-spring-gateway-prod.yml
@@ -32,22 +32,31 @@ spring:
               - POST
             max-age: 3600
       routes:
+        ###########################################
         - id: path1  # 路由的id,没有规定规则但要求唯一,建议配合服务名
           uri: lb://cyyaw-web-app # 匹配后提供服务的路由地址;   uri: http://localhost:8001
           predicates:
             - Path=/app/** # 断言，路径相匹配的进行路由
+        ###########################################
         - id: path2
           uri: lb://cyyaw-web-admin
           predicates:
             - Path=/admin/**
+        ###########################################
         - id: path3
           uri: lb://cyyaw-web-admin
           predicates:
             - Path=/tx/**
-        - id: path3
+        ###########################################
+        - id: path4
           uri: lb://cyyaw-web-admin
           predicates:
             - Path=/config/**
+        ########################################### 登录
+        - id: path5
+          uri: lb://cyyaw-web-admin
+          predicates:
+            - Path=/login/**
 
 management:
   endpoints:
