--- a/config-respo/cyyaw-service-sso-dev.yml
+++ b/config-respo/cyyaw-service-sso-dev.yml
@@ -12,7 +12,7 @@ spring:
     open-in-view: false
 
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cyyaw_page?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/cyyaw_user?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: because
     driver-class-name: com.mysql.cj.jdbc.Driver
