--- a/config-respo/cyyaw-eureka-prod.yml
+++ b/config-respo/cyyaw-eureka-prod.yml
@@ -7,7 +7,7 @@ server:
 
 eureka:
   instance:
-    hostname: 192.168.0.100
+    hostname: localhost
   client:
     registerWithEureka: false
     fetchRegistry: false
