--- a/config-respo/cyyaw-service-page-dev.yml
+++ b/config-respo/cyyaw-service-page-dev.yml
@@ -12,7 +12,7 @@ spring:
     open-in-view: false
 
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cyyaw_page?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.1.102:3306/cyyaw_page?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: because
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -35,8 +35,7 @@ logging:
 
 eureka:
   instance:
-    hostname: 192.168.1.102
-    prefer-ip-address: true
+    hostname: localhost
   client:
     serviceUrl:
-      defaultZone: http://192.168.0.100:9090/eureka/
+      defaultZone: http://${eureka.instance.hostname}:9090/eureka/
