--- a/config-respo/cyyaw-service-tx-dev.yml
+++ b/config-respo/cyyaw-service-tx-dev.yml
@@ -35,7 +35,7 @@ logging:
 
 eureka:
   instance:
-    hostname: 192.168.0.100
+    hostname: localhost
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:9090/eureka/
