--- a/config-respo/cyyaw-spring-boot-admin-prod.yml
+++ b/config-respo/cyyaw-spring-boot-admin-prod.yml
@@ -7,7 +7,7 @@ server:
 
 eureka:
   instance:
-    hostname: 192.168.0.100
+    hostname: localhost
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:9090/eureka/
