--- a/config-respo/cyyaw-service-goods-prod.yml
+++ b/config-respo/cyyaw-service-goods-prod.yml
@@ -22,8 +22,7 @@ spring:
       max-request-size: 10MB
   elasticsearch:
     rest:
-      uris:
-        -http://localhost:9200
+      uris: http://localhost:9200
 
 
 web:
