--- a/config-respo/cyyaw-spring-gateway-prod.yml
+++ b/config-respo/cyyaw-spring-gateway-prod.yml
@@ -53,7 +53,10 @@ spring:
           uri: lb://cyyaw-web-admin
           predicates:
             - Path=/pc/**
-
+        - id: path6
+          uri: lb://cyyaw-web-admin
+          predicates:
+            - Path=/store/**
 management:
   endpoints:
     web:
