--- a/cyyaw_common/pom.xml
+++ b/cyyaw_common/pom.xml
@@ -17,6 +17,8 @@
     <name>cyyaw_common</name>
     <packaging>jar</packaging>
 
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,6 +43,16 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+
+
 
         <dependency>
             <groupId>com.alibaba</groupId>
