--- a/config-respo/cyyaw-service-sso-dev.yml
+++ b/config-respo/cyyaw-service-sso-dev.yml
@@ -22,8 +22,10 @@ spring:
       max-request-size: 10MB
 
   redis:
+    database: 0
     host: 192.168.0.102
-
+    port: 6379
+    password:
 
 
 web:
