--- a/cyyaw_service_sso/pom.xml
+++ b/cyyaw_service_sso/pom.xml
@@ -18,6 +18,7 @@
         <java.version>1.8</java.version>
         <spring-boot-admin.version>2.3.1</spring-boot-admin.version>
         <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
+
     </properties>
 
     <dependencies>
@@ -50,6 +51,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
