--- a/spring_config/src/main/resources/bootstrap.yml
+++ b/spring_config/src/main/resources/bootstrap.yml
@@ -8,10 +8,10 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/1663784811/cyyaw.git
+          uri: https://gitee.com/cyyaw/cyyaw.git
           search-paths: /config-respo
-          #username: root  #账号密码写真实的快一些我觉得，不使用也能访问有点慢
-          #password: 12345678
+          username: 1663784811@qq.com  #账号密码写真实的快一些我觉得，不使用也能访问有点慢
+          password: ab9519895230.
 
   rabbitmq: #本地环境不需要配置mq
     host: 192.168.0.104
