--- a/config-respo/cyyaw-spring-gateway-prod.yml
+++ b/config-respo/cyyaw-spring-gateway-prod.yml
@@ -42,6 +42,7 @@ spring:
             - Path=/config/**
             - Path=/pc/**
             - Path=/store/**
+            - Path=/upload/**
         ###############    登录
         - id: path6
           uri: lb://cyyaw-service-sso
