--- a/config-respo/cyyaw-spring-gateway-dev.yml
+++ b/config-respo/cyyaw-spring-gateway-dev.yml
@@ -42,12 +42,16 @@ spring:
             - Path=/config/**
             - Path=/pc/**
             - Path=/store/**
-            - Path=/upload/**
         ###############    登录
         - id: path6
           uri: lb://cyyaw-service-sso
           predicates:
             - Path=/login/**
+        - id: path2
+          uri: lb://cyyaw-service-upload
+          predicates:
+            - Path=/upload/**
+
 management:
   endpoints:
     web:
