--- a/cyyaw_service_upload/pom.xml
+++ b/cyyaw_service_upload/pom.xml
@@ -8,11 +8,11 @@
         <version>2.3.5.RELEASE</version>
         <relativePath/>
     </parent>
-    <groupId>com.cyyaw.server.admin</groupId>
-    <artifactId>page</artifactId>
+    <groupId>com.cyyaw.server</groupId>
+    <artifactId>upload</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>cyyaw_service_page</name>
-    <description>听心页面服务</description>
+    <name>cyyaw_service_upload</name>
+    <description>资源服务</description>
 
     <properties>
         <java.version>1.8</java.version>
