--- a/cyyaw_service_upload/src/main/resources/bootstrap-prod.yml
+++ b/cyyaw_service_upload/src/main/resources/bootstrap-prod.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      name: cyyaw-service-page
+      name: cyyaw-service-upload
       label: master
-      profile: dev
+      profile: prod
