--- a/config-respo/cyyaw-web-admin-dev.yml
+++ b/config-respo/cyyaw-web-admin-dev.yml
@@ -11,3 +11,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:9090/eureka/
+
+
+feign:
+  hystrix:
+    enabled: true
