--- a/cyyaw_service_admin_store/pom.xml
+++ b/cyyaw_service_admin_store/pom.xml
@@ -70,6 +70,10 @@
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+        </dependency>
         <!--  ===================================  -->
 
     </dependencies>
